2014-08-12 Enable to init Mindmap with empty id value --> create new mind map on db.... Now you can test without dummy data. Also Trimmed some source codes...

--- a/WebContent/ThinkMine_MindMapPage_DEV.html
+++ b/WebContent/ThinkMine_MindMapPage_DEV.html
@@ -148,7 +148,7 @@
 
 
 			TMCanvas.connectToServer();
-			TMCanvas.initWithMindMap("536f9de336ace5e65af718f1");
+			TMCanvas.initWithMindMap("");
 			
 			
 			var lastDownTarget, canvas;
