Added changing Contents DB Feature

--- a/WebContent/ThinkMine_MindMapPage_DEV.html
+++ b/WebContent/ThinkMine_MindMapPage_DEV.html
@@ -152,7 +152,7 @@
 
 
 			TMCanvas.connectToServer();
-			TMCanvas.initWithMindMap("");
+			TMCanvas.initWithMindMap("536f9de336ace5e65af718f1");
 			
 			
 			var lastDownTarget, canvas;
