Added Putting some mind Object to another Mind Object World

--- a/WebContent/ThinkMine_MindMapPage_DEV.html
+++ b/WebContent/ThinkMine_MindMapPage_DEV.html
@@ -152,8 +152,8 @@
 
 
 			TMCanvas.connectToServer();
-			TMCanvas.initWithMindMap("536f9de336ace5e65af718f1");
-			
+			//TMCanvas.initWithMindMap("5404938d5188486821c03f47");
+			TMCanvas.initWithMindMap("");
 			
 			var lastDownTarget, canvas;
 
