bug fix for put into function

--- a/WebContent/ThinkMine_MindMapPage_DEV.html
+++ b/WebContent/ThinkMine_MindMapPage_DEV.html
@@ -152,8 +152,10 @@
 
 
 			TMCanvas.connectToServer();
-			//TMCanvas.initWithMindMap("5404938d5188486821c03f47");
-			TMCanvas.initWithMindMap("");
+			//TMCanvas.initWithMindMap("540496715188486821c03fc5");
+			
+			TMCanvas.initWithMindMap("5404966e5188486821c03fb9");
+			//TMCanvas.initWithMindMap("");
 			
 			var lastDownTarget, canvas;
 
