--- a/WebContent/ThinkMine_MindMapPage_DEV_v_svg.html
+++ b/WebContent/ThinkMine_MindMapPage_DEV_v_svg.html
@@ -14,12 +14,11 @@
         padding-top: 20px;
         padding-bottom: 60px;
       }
-	  
-	  
-	  /* Custom container */
+
+      /* Custom container */
       .container {
         margin: 0 auto;
-        max-width: 2000px;
+        max-width: 1000px;
       }
       .container > hr {
         margin: 60px 0;
@@ -84,9 +83,12 @@
     <link href="css/bootstrap/bootstrap-responsive.css" rel="stylesheet">
 	
 	<script src="ThinkMineLib.js"></script>
-	<script src="ThinkMineUILib.js"></script>
 	<script src="js/script.js"></script>
+	<script type="text/javascript">
 
+
+		
+	</script>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -184,19 +186,206 @@
           </div>
         </div><!-- /.navbar -->
       </div>
-	  
-<table><tr>
-    <!--each post is here--><td><canvas id="myCanvas" height = "600" width="1000"></canvas>		</td><!--To here-->
-	 <!--each post is here--><td><canvas id="color_picker_canvas" width="578" height="276"></canvas><br>
-								<input type="text" id="color_picker_red_input"></input><br>
-								<input type="text" id="color_picker_green_input"></input><br>
-								<input type="text" id="color_picker_blue_input"></input>
-								 
-							</td><!--To here-->
-</tr></table>
 
-		<div id="group_div_canvas_property" style="margin: 0 auto;" width = "2000" height="800">
 
+	<!--pointer-events: none;-->
+	<div id="svgAndcanvas" style="margin: 0 auto;">
+		<div id="svg" width='600' height='1000'  style="position:absolute;z-index:110; pointer-events: auto;" >
+			<svg id="svgHost" width="2000" height="2000" >
+				<path id="toolBoxRectangle" d="M0 0 L300 0 L300 300 L0 300 Z" fill="yellow"  xlink:href="http://jenkov.com/images/layout/top-bar-logo.png"/>
+
+				Sorry, your browser does not support inline SVG.
+		  <!--<image id="color-picker" x="20" y="20" width="100" height="100"
+			xlink:href="color-picker.png" />-->
+			<switch>
+			<foreignObject width="400" height="400"
+                   requiredExtensions="http://example.com/SVGExtensions/EmbeddedXHTML">
+			<body xmlns="http://www.w3.org/1999/xhtml">
+			adfnaldjkfnalkdjfnaldjk
+		<table>
+			<tr>
+				<td valign="top">
+					<div id="cp1_ColorMap" style="width:256px;"></div>
+				</td>
+				<td valign="top">
+					<div id="cp1_ColorBar"></div>
+				</td>
+	
+				<td valign="top">
+	
+					<table>
+						<tr>
+							<td colspan="3">
+								<div id="cp1_Preview" style="background-color: #fff; width: 60px; height: 60px; padding: 0; margin: 0; border: solid 1px #000;">
+									<br />
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<input type="radio" id="cp1_HueRadio" name="cp1_Mode" value="0" />
+							</td>
+							<td>
+								<label for="cp1_HueRadio">H:</label>
+							</td>
+							<td>
+								<input type="text" id="cp1_Hue" value="0" style="width: 40px;" /> &deg;
+							</td>
+						</tr>
+	
+						<tr>
+							<td>
+								<input type="radio" id="cp1_SaturationRadio" name="cp1_Mode" value="1" />
+							</td>
+							<td>
+								<label for="cp1_SaturationRadio">S:</label>
+							</td>
+							<td>
+								<input type="text" id="cp1_Saturation" value="100" style="width: 40px;" /> %
+							</td>
+						</tr>
+	
+						<tr>
+							<td>
+								<input type="radio" id="cp1_BrightnessRadio" name="cp1_Mode" value="2" />
+							</td>
+							<td>
+								<label for="cp1_BrightnessRadio">B:</label>
+							</td>
+							<td>
+								<input type="text" id="cp1_Brightness" value="100" style="width: 40px;" /> %
+							</td>
+						</tr>
+	
+						<tr>
+							<td colspan="3" height="5">
+	
+							</td>
+						</tr>
+	
+						<tr>
+							<td>
+								<input type="radio" id="cp1_RedRadio" name="cp1_Mode" value="r" />
+							</td>
+							<td>
+								<label for="cp1_RedRadio">R:</label>
+							</td>
+							<td>
+								<input type="text" id="cp1_Red" value="255" style="width: 40px;" />
+							</td>
+						</tr>
+	
+						<tr>
+							<td>
+								<input type="radio" id="cp1_GreenRadio" name="cp1_Mode" value="g" />
+							</td>
+							<td>
+								<label for="cp1_GreenRadio">G:</label>
+							</td>
+							<td>
+								<input type="text" id="cp1_Green" value="0" style="width: 40px;" />
+							</td>
+						</tr>
+	
+						<tr>
+							<td>
+								<input type="radio" id="cp1_BlueRadio" name="cp1_Mode" value="b" />
+							</td>
+							<td>
+								<label for="cp1_BlueRadio">B:</label>
+							</td>
+							<td>
+								<input type="text" id="cp1_Blue" value="0" style="width: 40px;" />
+							</td>
+						</tr>
+	
+	
+						<tr>
+							<td>
+								#:
+							</td>
+							<td colspan="2">
+								<input type="text" id="cp1_Hex" value="FF0000" style="width: 60px;" />
+							</td>
+						</tr>
+	
+					</table>
+				</td>
+			</tr>
+		</table>
+		
+	
+	<div style="display:none;">
+		<img src="refresh_web/colorpicker/images/rangearrows.gif" />
+		<img src="refresh_web/colorpicker/images/mappoint.gif" />
+		
+		<img src="refresh_web/colorpicker/images/bar-saturation.png" />
+		<img src="refresh_web/colorpicker/images/bar-brightness.png" />
+		
+		<img src="refresh_web/colorpicker/images/bar-blue-tl.png" />
+		<img src="refresh_web/colorpicker/images/bar-blue-tr.png" />
+		<img src="refresh_web/colorpicker/images/bar-blue-bl.png" />
+		<img src="refresh_web/colorpicker/images/bar-blue-br.png" />
+		<img src="refresh_web/colorpicker/images/bar-red-tl.png" />
+		<img src="refresh_web/colorpicker/images/bar-red-tr.png" />
+		<img src="refresh_web/colorpicker/images/bar-red-bl.png" />
+		<img src="refresh_web/colorpicker/images/bar-red-br.png" />	
+		<img src="refresh_web/colorpicker/images/bar-green-tl.png" />
+		<img src="refresh_web/colorpicker/images/bar-green-tr.png" />
+		<img src="refresh_web/colorpicker/images/bar-green-bl.png" />
+		<img src="refresh_web/colorpicker/images/bar-green-br.png" />
+		
+		<img src="refresh_web/colorpicker/images/map-red-max.png" />
+		<img src="refresh_web/colorpicker/images/map-red-min.png" />
+		<img src="refresh_web/colorpicker/images/map-green-max.png" />
+		<img src="refresh_web/colorpicker/images/map-green-min.png" />
+		<img src="refresh_web/colorpicker/images/map-blue-max.png" />
+		<img src="refresh_web/colorpicker/images/map-blue-min.png" />
+		
+		<img src="refresh_web/colorpicker/images/map-saturation.png" />
+		<img src="refresh_web/colorpicker/images/map-saturation-overlay.png" />
+		<img src="refresh_web/colorpicker/images/map-brightness.png" />
+		<img src="refresh_web/colorpicker/images/map-hue.png" />
+		
+		
+		
+	</div>			
+			</body>
+			
+			
+				   
+			</foreignObject>
+			</switch>
+			  <switch>
+    <!-- Process the embedded XHTML if the requiredExtensions attribute
+         evaluates to TRUE (that is, the browser supports XHTML
+         embedded within SVG). -->
+    <foreignObject width="100" height="50"
+                   requiredExtensions="http://example.com/SVGExtensions/EmbeddedXHTML">
+      <!-- XHTML content goes here -->
+      <body xmlns="http://www.w3.org/1999/xhtml">
+        <p>Here is a paragraph that requires word wrap.</p>
+      </body>
+    </foreignObject>
+    <!-- ELSE, process the following alternate SVG.
+         Note that there are no testing attributes on the <text> element.
+         If no testing attributes are provided, it is as if there
+         were testing attributes and they evaluated to TRUE.-->
+    <text font-size="10" font-family="Verdana">
+      <tspan x="10" y="10">Here is a paragraph that</tspan>
+      <tspan x="10" y="20">requires word wrap.</tspan>
+    </text>
+  </switch>
+			</svg> 
+			
+		
+		</div>
+		<div id="colorpicker" width='500' height='500'  style="position:absolute;z-index:120; pointer-events: auto;" >
+
+	</div>
+		<div id="canvas" width='600' height='1000' style="position:absolute;z-index:100;">
+			<canvas id="myCanvas" height = "600" width="1000"></canvas>		
+		</div>
 	</div>
 
       <hr>
@@ -226,8 +415,34 @@
 	
 	
 	
-
+		<!--	<script type="text/javascript" src="refresh_web/prototype.js" ></script>
+		<script type="text/javascript" src="refresh_web/colorpicker/colormethods.js" ></script>
+		<script type="text/javascript" src="refresh_web/colorpicker/colorvaluepicker.js" ></script>
+		<script type="text/javascript" src="refresh_web/colorpicker/slider.js" ></script>
+		<script type="text/javascript" src="refresh_web/colorpicker/colorpicker.js" ></script>
 		
+			<script type="text/javascript">
+	
+	Event.observe(window,'load',function() {
+		cp1 = new Refresh.Web.ColorPicker('cp1', {startHex: 'ffcc00', startMode:'s'});
+	});
+	
+	
+	</script>
+	
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-3734687-9']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script> -->
 	
 	
 	
@@ -236,17 +451,11 @@
 	<script>
 			var TMCanvas;
 			var wrappedEventHandler;
-			
-			
 			window.onload = function() {
-			//com.local.SVGHandlers.Initialize();
+			com.local.SVGHandlers.Initialize();
 			//setUpPaperLib('myCanvas');
 			
-			ThinkMine.Lib.ExternalUI.ColorPickerCanvas.attach("color_picker_canvas");
-			
-			ThinkMine.Lib.ExternalUI.ColorPickerRedInput.attach("color_picker_red_input");
-			ThinkMine.Lib.ExternalUI.ColorPickerGreenInput.attach("color_picker_green_input");
-			ThinkMine.Lib.ExternalUI.ColorPickerBlueInput.attach("color_picker_blue_input");
+
 	//	var ms;
 //Today = new Date();
 //Prev = new Date('1970-01-01');
@@ -328,7 +537,7 @@
 			TMCanvas.connectToServer();
 			//TMCanvas.initWithMindMap("5419a2a443caa5a02237ae41");
 			
-			TMCanvas.initWithMindMap("54564d73b95be7c01543e96d");
+			TMCanvas.initWithMindMap("");
 			//TMCanvas.initWithMindMap("5447c235e95398a80b6b451a");
 			
 			var lastDownTarget, canvas;
@@ -360,12 +569,7 @@
 			$("#CircleShapeImage").click(function(){
 				TMCanvas.enableObjectAddMode();
 				TMCanvas.setMenuSelectedShape(0);
-				var shapeColor = "#" +
-								ThinkMine.Lib.ExternalUI.ColorPickerCanvas.getRedValue().toString(16) +
-								ThinkMine.Lib.ExternalUI.ColorPickerCanvas.getGreenValue().toString(16) +
-								ThinkMine.Lib.ExternalUI.ColorPickerCanvas.getBlueValue().toString(16) ;
-				console.log(shapeColor);
-				TMCanvas.setMenuInsertedSDI(new CircleShapeTypeDependentInfo(10,shapeColor));
+				TMCanvas.setMenuInsertedSDI(new CircleShapeTypeDependentInfo(10,"#FF0000"));
 				TMCanvas.setMenuSelectedContents(0);
 				TMCanvas.setMenuInsertedCDI(new TextContentsTypeDependentInfo("#FFFFFF",'Courier New','bold',25));
 				TMCanvas.setMenuInsertedCV("UI Interaction Test");
@@ -376,11 +580,7 @@
 			$("#RectangleShapeImage").click(function(){
 				TMCanvas.enableObjectAddMode();
 				TMCanvas.setMenuSelectedShape(1);
-				var shapeColor = "#" +
-								ThinkMine.Lib.ExternalUI.ColorPickerCanvas.getRedValue().toString(16) +
-								ThinkMine.Lib.ExternalUI.ColorPickerCanvas.getGreenValue().toString(16) +
-								ThinkMine.Lib.ExternalUI.ColorPickerCanvas.getBlueValue().toString(16) ;
-				TMCanvas.setMenuInsertedSDI(new RectangleShapeTypeDependentInfo(10, 10, shapeColor, true));
+				TMCanvas.setMenuInsertedSDI(new RectangleShapeTypeDependentInfo(10, 10, "#FF0000", true));
 				TMCanvas.setMenuSelectedContents(0);
 				TMCanvas.setMenuInsertedCDI(new TextContentsTypeDependentInfo("#FFFFFF",'Courier New','bold',25));
 				TMCanvas.setMenuInsertedCV("UI Interaction Test");
@@ -391,11 +591,7 @@
 			$("#StarShapeImage").click(function(){
 				TMCanvas.enableObjectAddMode();
 				TMCanvas.setMenuSelectedShape(2);
-				var shapeColor = "#" +
-								ThinkMine.Lib.ExternalUI.ColorPickerCanvas.getRedValue().toString(16) +
-								ThinkMine.Lib.ExternalUI.ColorPickerCanvas.getGreenValue().toString(16) +
-								ThinkMine.Lib.ExternalUI.ColorPickerCanvas.getBlueValue().toString(16) ;
-				TMCanvas.setMenuInsertedSDI(new StarShapeTypeDependentInfo(5, 150, 75,shapeColor));
+				TMCanvas.setMenuInsertedSDI(new StarShapeTypeDependentInfo(5, 150, 75,"#000F00"));
 				TMCanvas.setMenuSelectedContents(0);
 				TMCanvas.setMenuInsertedCDI(new TextContentsTypeDependentInfo("#FFFFFF",'Courier New','bold',25));
 				TMCanvas.setMenuInsertedCV("UI Interaction Test");
@@ -406,11 +602,7 @@
 			$("#PolygonShapeImage").click(function(){
 				TMCanvas.enableObjectAddMode();
 				TMCanvas.setMenuSelectedShape(3);
-				var shapeColor = "#" +
-								ThinkMine.Lib.ExternalUI.ColorPickerCanvas.getRedValue().toString(16) +
-								ThinkMine.Lib.ExternalUI.ColorPickerCanvas.getGreenValue().toString(16) +
-								ThinkMine.Lib.ExternalUI.ColorPickerCanvas.getBlueValue().toString(16) ;
-				TMCanvas.setMenuInsertedSDI(new PolygonShapeTypeDependentInfo(14, 10, shapeColor));
+				TMCanvas.setMenuInsertedSDI(new PolygonShapeTypeDependentInfo(14, 10, "#00F0FF"));
 				TMCanvas.setMenuSelectedContents(0);
 				TMCanvas.setMenuInsertedCDI(new TextContentsTypeDependentInfo("#FFFFFF",'Courier New','bold',25));
 				TMCanvas.setMenuInsertedCV("UI Interaction Test");
