Animation Worker Refactoring, and paritial re-implementation for the Circle Shape MindObject Creation Animation

--- a/WebContent/ThinkMine_MindMapPage_DEV.html
+++ b/WebContent/ThinkMine_MindMapPage_DEV.html
@@ -336,7 +336,7 @@
 			TMCanvas.connectToServer();
 			//TMCanvas.initWithMindMap("5419a2a443caa5a02237ae41");
 			
-			TMCanvas.initWithMindMap("5460d78fedec29b016b5ee4e");
+			TMCanvas.initWithMindMap("");
 			//TMCanvas.initWithMindMap("5447c235e95398a80b6b451a");
 			
 			var lastDownTarget, canvas;
