Revised to show expansion effect when the result arrive from server, and implemented room functionality on the server side.

--- a/WebContent/ThinkMine_MindMapPage_DEV.html
+++ b/WebContent/ThinkMine_MindMapPage_DEV.html
@@ -336,7 +336,7 @@
 			TMCanvas.connectToServer();
 			//TMCanvas.initWithMindMap("5419a2a443caa5a02237ae41");
 			
-			TMCanvas.initWithMindMap("");
+			TMCanvas.initWithMindMap("5455d9a67c40d40c0ef98008");
 			//TMCanvas.initWithMindMap("5447c235e95398a80b6b451a");
 			
 			var lastDownTarget, canvas;
