Resize shape in progress

--- a/WebContent/ThinkMine_MindMapPage_DEV.html
+++ b/WebContent/ThinkMine_MindMapPage_DEV.html
@@ -199,9 +199,9 @@
 			document.getElementById('show').onclick = function() {
 				$("#myModal").modal('show');
 			};
-			document.getElementById('exit').onclick = function() {
+			/*document.getElementById('exit').onclick = function() {
 				dialog.close();
-			};
+			};*/
 		})();
 	</script>	
 	
