Tool box in progress

--- a/WebContent/ThinkMine/thidparty/gradx-master/demo.html
+++ b/WebContent/ThinkMine/thidparty/gradx-master/demo.html
@@ -94,9 +94,12 @@
 
         <script>
 
-            gradX("#gradX", {
+            var a = gradX("#gradX", {
                 targets: [".target"]
             });
+			a.change = function(){
+				console.log("change");
+			};
 
         </script>
 
