Added Searching and Inspiring UX

--- a/WebContent/ThinkMine/ThinkMineCV/a.html
+++ b/WebContent/ThinkMine/ThinkMineCV/a.html
@@ -234,7 +234,7 @@ adfadsfsdㅁㅁㅁㅁ
 <img id="drag1" src="http://cfile25.uf.tistory.com/image/167A813D4ED44F211FEC86" draggable="true"
 ondragstart="drag(event)" width="336" height="336">
 
-
+<object data="http://www.naver.com" width="600" height="400"> <embed src="http://www.naver.com" width="600" height="400"> </embed> Error: Embedded data could not be displayed. </object>
 
 <iframe  id="naver" src="http://www.naver.com" width="700" height="800" scrolling="auto" sandbox="allow-same-origin allow-scripts allow-popups allow-forms"> </iframe>
 
